# mafuyu-AI

./: .gitignore  README.md  agent.py  budget.py  chat.py  config.py  discord_bot.py  emotion.py  llm.py  llm_hf.py  mafuyu.py  main.py  memory.py  pyproject.toml  router.py  state.py  tools.py
docs/: architecture.md
mafuyu_ai/: __init__.py  settings.py
mafuyu_ai/agent/: __init__.py  runner.py  state.py
mafuyu_ai/core/: __init__.py  chat.py  emotion.py  memory.py  prompts.py  response.py  session.py
mafuyu_ai/interfaces/: __init__.py  cli.py  discord.py
mafuyu_ai/llm/: __init__.py  agent_protocol.py  client.py  huggingface.py  ollama.py  router.py
mafuyu_ai/resources/: __init__.py  system_prompt.txt
mafuyu_ai/tools/: __init__.py  codex.py  filesystem.py  policy.py  registry.py  safety.py  web.py
tests/: test_agent_security.py  test_core_response.py  test_discord_sessions.py
